--- a/Cotiviti/style.css
+++ b/Cotiviti/style.css
@@ -5,6 +5,9 @@
   font-family: "Arial";
   line-height: 1.5;
 }
+a{
+  text-decoration: none;
+}
 header {
   background-color: #31006e;
   padding-top: 20px;
@@ -15,7 +18,6 @@ header {
 }
 #menu li a {
   color: white;
-  text-decoration: none;
   padding: 15px;
 }
 #menu li a:hover {
@@ -80,8 +82,6 @@ section#hero{
 
 /* bilding-wrapper */
 .imagewrapper{
-    /* width: auto; */
-    /* height: 30vw; */
     background-image: url("images/building.png");
     background-position: center right;
     background-repeat: no-repeat;
@@ -99,7 +99,6 @@ div.content p{
 }
 div.content a{
     color: #2E3192;
-    text-decoration: none;
 }
 /* image-section */
 section#imgsection {
@@ -109,3 +108,73 @@ section#imgsection {
     background-position: center center;
     background-image: url("images/parallax-home.jpg");
 }
+/* team section */
+section#team .container{
+  margin-top: 60px;
+  text-align: center;
+  
+}
+section#team{
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-image: url("images/join.png");
+  padding: 4rem;
+  padding-bottom: 120px;
+}
+section#team .container img{
+  margin-top: 20px;
+}
+div.container .join-team h3{
+  color: #2E3192;
+  font-weight: 500;
+  font-size: 40px;
+}
+div.container .join-team p{
+  margin-top: 16px;
+  margin-bottom: 20px;
+  color: #333333;
+  font-weight: 500;
+  font-size: 16px;
+}
+.tname{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.team-name{
+  border-bottom: 1px solid #D9D9D9;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.team-name p.post a{
+  font-size: 24px;
+  color: #EC0086;
+}
+.bx-chevron-right{
+  font-size: 25px;
+  color: #2E3192;
+}
+/* search img */
+section#team .container p.looking{
+  margin-bottom: 60px;
+  text-align: center;
+  font-size: 16px;
+  color: #333333;
+}
+strong{
+  font-weight: 400;
+  font-size: 30px;
+  color: #333333;
+}
+button{
+  cursor: pointer;
+  border: 1px solid #2E3192;
+  background-color: transparent;
+  padding: 10px 15px;
+  border-radius: 5px;
+  color: #2E3192;
+  font-size: 1rem;
+}
+/* corporate section */
