--- a/Cotiviti/style.css
+++ b/Cotiviti/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
   font-family: "Arial";
   line-height: 1.5;
 }
@@ -169,6 +170,8 @@ strong{
   color: #333333;
 }
 button{
+  margin-right: 5px;
+  margin-top: .5rem;
   cursor: pointer;
   border: 1px solid #2E3192;
   background-color: transparent;
@@ -176,5 +179,89 @@ button{
   border-radius: 5px;
   color: #2E3192;
   font-size: 1rem;
+  transition: all .2s linear;
+}
+button:hover{
+  border: none;
+  color: white;
+  background-color: #f0047f;
 }
 /* corporate section */
+section#csr{
+  padding: 3rem;
+  background-image: url("images/csr-section-bg.jpg");
+  background-color: #2E3192;
+}
+#csr div.container .tname, .imagecsr{
+  width: 40%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+#csr div.container .tname{
+  width: 40%;
+}
+#csr div.container{
+  display: flex;
+  
+}
+div.container .tname h2, .apart{
+  color: white;
+  margin-bottom: 30px;
+}
+.apart{
+  font-size: 1rem;
+}
+.learn-more{
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+}
+/* .csr-img{
+  background-image: url("");
+} */
+/* footer */
+/* footer-bar */
+footer{
+  background-color: #EAEAEA;
+  padding-top: 35px;
+}
+.footer-bar{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+.navigate, .foot-contact{
+  color: #2E3192;
+  font-size: 22px;
+}
+.navigate{
+  width: 50%;
+}
+.footnav{
+  display: flex;
+  justify-content: space-between;
+}
+footer  a, footer p{
+  font-size: 1rem;
+  color: #666666;
+}
+footer a:hover{
+  color: #EC0086;
+}
+.foot-contact{
+  width: 30%;
+}
+footer p{
+  margin-top: .5rem;
+}
+footer strong{
+  font-size: .9rem;
+  font-weight: bold;
+}
+/* copyright */
+.footer-copyright{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1.4rem;
+  padding-bottom: 2.5rem;
+}
