--- a/Cotiviti/style.css
+++ b/Cotiviti/style.css
@@ -6,6 +6,9 @@
   font-family: "Arial";
   line-height: 1.5;
 }
+html{
+  scroll-behavior: smooth;
+}
 a{
   text-decoration: none;
 }
@@ -13,6 +16,10 @@ header {
   background-color: #31006e;
   padding-top: 20px;
   padding-bottom: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
 }
 #menu li {
   display: inline-block;
@@ -264,4 +271,21 @@ footer strong{
   justify-content: space-between;
   padding-top: 1.4rem;
   padding-bottom: 2.5rem;
+}
+/* button-top */
+#back-to-top{
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: rgba(0,0,0,0.5);
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+a#back-to-top i{
+  font-size: 1.5rem;
 }
