box-shadow removed

--- a/Cotiviti/style.css
+++ b/Cotiviti/style.css
@@ -19,7 +19,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+  /* box-shadow: 2px 2px 10px rgba(0,0,0,0.5); */
 }
 #menu li {
   display: inline-block;
