--- a/flex-property/lindastyle.css
+++ b/flex-property/lindastyle.css
@@ -5,7 +5,10 @@
     font-family: "Arial";
 }
 body {
-    margin-top: 1rem;
+    height: 100vh;
+    display: flex;
+     align-items: center;
+    justify-content: center;
     background-color: #995BED;
 }
 a{
@@ -15,10 +18,9 @@ a{
 }
 main{
     margin-left: auto;
-    margin-right:  auto;
+    margin-right: auto;
     width: 20%;
     background-color: white;
-    /* text-align: center; */
 }
 .side{
     font-weight: bold;
@@ -45,7 +47,7 @@ main{
     padding: .7rem;
     color: #555555;
     cursor: pointer;
-    transition: all 1s ease;
+    transition: all .5s ease;
 }
 .box:hover{
     background-color: #F7F2FE;
