--- a/flex-property/style.css
+++ b/flex-property/style.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family:"Arial"
+}
+html{
+    height: 100%;
 }
 a{
     text-decoration: none;
@@ -9,8 +13,11 @@ a{
     border-bottom: 1px solid #B5B5B5;
 }
 body{
-    margin-top:  1rem;
     background: #669EEC;  
+    height: 100vh;
+    display: flex;
+     align-items: center;
+    justify-content: center;
 }
 main, .box{
     display: flex;
@@ -18,13 +25,16 @@ main, .box{
 main {
     margin-left: auto;
     margin-right:  auto;
+    
+    /* height: 100vh; */
     width: 50%;
+    /* border: 1px solid red; */
     background-color: white;
 }
-
 .container{
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     width: 100%;
     padding-left: .6rem;
     padding-right: .6rem;
@@ -37,8 +47,8 @@ main {
     font-size: 1rem ;
     color: #B5B5B5;
 }
-
 .box{
+    justify-content: flex-start;
     align-items: center;
     margin: 1rem;
 }
@@ -49,3 +59,4 @@ img{
     padding-bottom: none;
     border-bottom: none;
 }
+
