--- a/Airtravel/style.css
+++ b/Airtravel/style.css
@@ -107,10 +107,38 @@ i {
 }
 .destination {
   display: flex;
+  justify-content: center;
   align-items: center;
-  padding-right: 4rem;
+  /* padding-right: 4rem; */
   border-right: 1px solid #514d59;
 }
+/* input type */
+input {
+  border: none;
+  outline: none;
+  padding: 0.3rem 0.3rem 0.3rem 0;
+}
+input::after {
+  border: none;
+}
+input::placeholder {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #514d59;
+}
+input[type="date"]{
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #514d59;
+    content: attr(placeholder);
+    /* margin-right: 122px; */
+     /* // push the default placeholder out.. you can add more if you want */
+}
+/* input[type="date"]{
+    content: "MM / DD / YY" !important;
+    display: none;
+} */
+/* upto input type */
 .luggage {
   border-right: none;
 }
@@ -289,19 +317,19 @@ p.name {
 }
 /* footer2 */
 #footer2 {
-  
+  /* font-size: .5rem; */
   background-color: #eaeaea;
 }
 .footerbox2 {
   /* width: 30%; */
-  
+
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.footerbox2 p:nth-child(1), .footerbox2 p:nth-child(2){
-    
-    margin-right: 2rem;
+.footerbox2 p:nth-child(1),
+.footerbox2 p:nth-child(2) {
+  margin-right: 2rem;
 }
 #footer2 .container {
   padding: 1rem 0rem 1rem 0rem;
