work in progress()airtravel=webkit type date

--- a/Airtravel/style.css
+++ b/Airtravel/style.css
@@ -131,9 +131,12 @@ input[type="date"]{
     font-weight: bold;
     color: #514d59;
     content: attr(placeholder);
-    /* margin-right: 122px; */
      /* // push the default placeholder out.. you can add more if you want */
 }
+#datepicker::-webkit-calendar-picker-indicator{
+   display: none;
+    /* content: '' !important; */
+  }
 /* input[type="date"]{
     content: "MM / DD / YY" !important;
     display: none;
