--- a/lftechnology/style.css
+++ b/lftechnology/style.css
@@ -168,6 +168,10 @@ figure{
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
+/* #russrichad{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+} */
 .text p{
     font-size: 1.5rem;
     font-weight: 500;
