--- a/lftechnology/style.css
+++ b/lftechnology/style.css
@@ -69,6 +69,9 @@ button:hover{
     margin-left: 118px;
     margin-right: 118px;
 }
+iframe{
+ border: 1px solid red;
+}
 .herohead{
     display: flex;
     justify-content: space-between;
@@ -168,10 +171,7 @@ figure{
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
-/* #russrichad{
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-} */
+
 .text p{
     font-size: 1.5rem;
     font-weight: 500;
