--- a/lftechnology/style.css
+++ b/lftechnology/style.css
@@ -70,7 +70,7 @@ button:hover{
     margin-right: 118px;
 }
 iframe{
- border: 1px solid red;
+    border-radius: 0px 0px 8rem 0px;
 }
 .herohead{
     display: flex;
@@ -177,12 +177,72 @@ figure{
     font-weight: 500;
 }
 .russrow{
+    margin-left: 100px;
+    margin-right: 100px;
+    width: 85%;
     display: flex;
 }
 .imageRuss, .text{
     padding: 0px .8rem;
 }
+.text{
+    margin-top: 1.5rem;
+}
 p.path{
     font-weight: bold;
     font-size: 6rem;
+}
+.imageRuss img{
+    aspect-ratio: auto 196 / 196;
+}
+.russflex{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.russname .bold{
+    color: #038E43;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+.russname p{
+    color: #111111;
+    font-size: 1rem;
+}
+
+/* section code */
+.header ul{
+    /* border: 1px solid red; */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+div.header li img{
+    margin-right: 1rem;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+.first{
+    background-color: black;
+    
+}
+.first img{
+    /* fill: white; */
+    color: white;
+}
+.first a{
+    color: white;
+    font-weight: bold;
+}
+.header li a{
+    color: #111111;
+    padding: 1.5rem;
+    font-size: 1rem;
+    /* border: 1px solid green; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
