--- a/lftechnology/style.css
+++ b/lftechnology/style.css
@@ -10,9 +10,13 @@ a{
     text-decoration: none;
 }
 header{
+    background-color: white;
+    position: fixed;
     width: 100%;
-    margin: 1.5rem auto 1.5rem auto ; 
-    max-width: 1300px;
+    padding: 0rem 2rem 0rem 3rem ;
+    margin-top: 2rem;
+    margin: auto auto  auto ; 
+    /* max-width: 1400px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -47,6 +51,7 @@ button{
     font-weight: bold;
     color: white;
     font-size: 1rem;
+    
     padding: 1.5rem 1.2rem 1.5rem 1.2rem;
     border: none;
     cursor: pointer;
@@ -56,6 +61,8 @@ button:hover{
     background-color: #333333;
 }
 .btn{
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -65,6 +72,9 @@ button:hover{
     margin-right: .5rem;
 }
 /* hero-section */
+#hero-section{
+    padding-top: 5rem;
+}
 .container{
     margin-left: 118px;
     margin-right: 118px;
@@ -229,7 +239,7 @@ div.header li img{
     background-color: black;
     
 }
-.first img{
+.first p{
     /* fill: white; */
     color: white;
 }
@@ -245,4 +255,62 @@ div.header li img{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+/* code-class */
+.flesx1{
+    color: white;
+    margin-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.flesx1 p{
+    margin-top: 1rem;
+    font-size: 1rem;
+}
+.flesx1 h2{
+    text-align: start;
+    font-size: 2.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.para{
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 2rm;
+}
+.code-class{
+    background-color: black;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.flex{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.flesx2 img{
+    height: auto;
+    width: 100%;
+    margin-left: 3rem;
+}
+.flesx1 a{
+    background-color: #038E43;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+a .bx-right-arrow-alt{
+    font-size: 1rem;
+}
+.btncode{
+    margin-top: 3rem;
+    display: flex;
+   /* justify-content: center;
+    align-items: flex-end;  */
+    gap: 0.5rem;
+}
+a span, a i{
+    color: white;
+    font-weight: bold;
 }
