--- a/bootstrap/Net-Tv/style.css
+++ b/bootstrap/Net-Tv/style.css
@@ -23,6 +23,9 @@ img, h5{
     padding-top: 0.5rem;
     padding-bottom: .5rem;
 }
+div.col-sm-6{
+    flex-basis: calc(33.33% - 2rem);
+}
 div.col-4{
     padding: 1.5rem;
     border-radius: .8rem;
