--- a/bootstrap/Sherpa's_Travel/style.css
+++ b/bootstrap/Sherpa's_Travel/style.css
@@ -14,6 +14,8 @@ main {
   background-position: top right;
 }
 div.container {
+  margin-left: auto;
+  margin-right: auto;
   background-image: url("images/plane.png");
   background-size: 60px auto;
   background-repeat: no-repeat;
@@ -34,19 +36,22 @@ p.gray {
   width: 50px;
   /* background-color: aquamarine; */
 }
-.circle img {
+.row1 img {
   /* border: 1px solid black; */
   border-radius: 50%;
 }
-div.col {
+div.col-3 {
   background-color: white;
 }
 div.row {
   padding-top: 2rem;
+  flex-wrap: wrap;
 }
-.col {
+.col-3 {
+  flex-basis: calc(25% - 1.5rem);
   border-radius: 1.5rem;
-  margin-right: 2rem;
+  margin-right: 1rem;
+  margin-bottom: 3rem;
 }
 div.gray,
 div.h5,
